# VSTPlus

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
VSTPlus/: .gitignore
docs/: ESP32S3_Development_Notes.md  I2C_Architecture_TSIM7080G.md  Post_and_Debug_Documentation.md  Setup_ESP_IDF_for_VSCode.md  T-SIM7080G-S3_Pinout.md  VSTPlus_Development_Notes.md  aw9523_traffic_light_devnote.md  cameras.txt  debug-01.txt  debug-02.txt  debug-03.txt  register90.txt
examples/: README.md
main/: CMakeLists.txt  aw9523_traffic_light.cpp  aw9523_traffic_light.h  main.c  main.cpp  pmu_debug.h  post_diagnostics.cpp  post_diagnostics.h
versions/20251117 POSTDIAG/: CMakeLists.txt  post_diagnostics.h
versions/20251118 MODEM/: CMakeLists.txt  main.cpp  pmu_debug.cpp  pmu_debug.h  post_diagnostics.cpp  post_diagnostics.h
versions/20251118 MODEMFIX/: CMakeLists.txt  idf_component.yml  pmu_debug.cpp  post_diagnostics.cpp
