idf_component_register(
    SRCS
        "main.cpp"
        "post_diagnostics.cpp"
        "pmu_debug.cpp"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        esp_system
        spi_flash
        esp_psram
        heap
        fatfs
        sdmmc
        driver
        vfs
        esp_timer
        esp_driver_uart
        esp_driver_i2c
        esp_modem
)
